--- a/web/package.json
+++ b/web/package.json
@@ -52,12 +52,14 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.4",
+    "react-router-dom": "^7.8.1",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "vaul": "^1.1.2",
-    "zod": "^4.0.14"
+    "zod": "^4.0.14",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -69,6 +71,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "servidor": "file:../server",
     "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
